# minirover

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.include  cmake_install.cmake  minirover.ioc  readme.md  stm32f4-discovery.ld  todo
Inc/: accelerometer.h  hc_sr04.h  log.h  main.h  motor.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  ultrasonic.h  usart.h
Src/: accelerometer.c  adc.c  ble.c  dma.c  gpio.c  hc_sr04.c  log.c  main.c  motor.c  stm32f4xx_it.c  tim.c  ultrasonic.c  usart.c
cubemx/: readme.md
inc/: continuous_servo.h  gpio.h  h_bridge.h  log.h  math.h  motor.h  motor_delegate.h  stepper.h  timer.h  ultrasonic.h  usart.h  util_define.h
inc/drivers/: bluetooth.h  continuous_servo.h  h_bridge.h  motor_delegate.h  stepper.h  ultrasonic.h
inc/peripherals/: gpio.h  usart.h
inc/utils/: debug.h  delay.h  log.h
include/: adc.h  ble.h  gpio.h  log.h  main.h  stm32f4xx_it.h  tim.h  usart.h
oldinclude/: log.h  main.h  tim.h  usart.h
oldsrc/: gpio.c  main.c  stm32f4xx_hal_msp.c
src/: Makefile  adc.c  log.c  main.c  main.cpp  motor.c
src/control/: timer.c
src/drivers/: bluetooth.cpp  continuous_servo.cpp  h_bridge.cpp  motor_delegate.cpp  stepper.cpp  ultrasonic.cpp
src/peripherals/: gpio.c  timer.c  usart.c
src/utils/: debug.cpp  delay.c  log.c  math.c
tools/cubemx/: otomo.ioc
tools/xpack-qemu-arm-2.8.0-12/distro-info/scripts/: host-defs-source.sh
tools/xpack-qemu-arm-2.8.0-12/libexec/: libiconv.so.2.6.0  libz.so.1.2.11  qemu-bridge-helper
tools/xpack-qemu-arm-2.8.0-12/share/doc/man/man1/: qemu.1
